--- a/examples/demo/src/index.css
+++ b/examples/demo/src/index.css
@@ -105,7 +105,7 @@ body {
 .right-sidebar {
   position: fixed;
   right: 12px;
-  top: 20vh;
+  bottom: 180px;
   display: flex;
   flex-direction: column;
   align-items: center;
